# log-sankey

./: .gitignore
rust/logparser/: Cargo.toml
rust/logparser/src/: lib.rs  parser.rs  session_analyzer.rs  stats.rs  streamutil.rs
www/: App.svelte  FlowChart.svelte  LogDrop.svelte  logbase.ts  main.ts  package.json  rollup.config.js  tsconfig.json  wasm-facade.ts
www/public/: index.html
