[package]
name = "logparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-streams = "0.2"
wasm-bindgen-futures = "^0.4.20"
futures = "^0.3.12"
js-sys = "^0.3.47"
regex = "1"
chrono = "0.4"
console_error_panic_hook = "0.1"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "^0.3.47"
features = [
	"console",
    "AbortSignal",
    "Response",
    "ReadableStream",
    "Window",
]

[profile.release]
lto = true
opt-level = 3
